Fix footer position on mobile

--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -29,9 +29,15 @@ footer .nav li a {
 }
 
 footer img {
-  margin-top: -20px;
-  margin-left: -160px;
+  margin: -20px auto 0;
 }
+
+@media screen and (min-width: 1179px) {
+  footer img {
+    margin-left: -160px;
+  }
+}
+
 footer p {
   color: rgb(240, 241, 241);
   font-size: 1.4rem;
